fix: navbar overflowed horizontally

--- a/src/ui/components/navbar.module.css
+++ b/src/ui/components/navbar.module.css
@@ -4,7 +4,6 @@
     background-color: black;
     padding: 10px 20px;
     align-items: center;
-    width: 100vw;
 }
 
 .navbar-nav {
